# contacts_fastapi

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini  sphinx.ini
alembic/: env.py
alembic/versions/: c999fea8f375_initial_tables.py
config/: cache.py  cloudinary_config.py  db.py  general.py
src/: __init__.py
src/auth/: __init__.py  mail_auth.py  models.py  path_utils.py  repos.py  routers.py  schema.py  utils.py
src/contacts/: models.py  repos.py  routers.py  schema.py
src/templates/: verification_email.html
tests/: conftest.py  not_workin_test_contacts.py  test_auth.py  test_health.py
tests/test_repositories/: test_contacts.py
