[tool.poetry]
name = "contacts-fastapi"
version = "0.1.0"
description = ""
authors = ["zhendler <zhendlerbing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.2"
aioredis = "^2.0.1"
fastapi-cache2 = "^0.2.2"
redis = "^5.2.1"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.41.0"
sphinxcontrib-asyncio = "^0.3.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.24.1"
pytest-faker = "^2.0.0"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.24.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
